gcc/testsuite/gdc.test/compilable/imports/test19750d.d
import test19750;
class Dap(T) {}
class Thud: Foo {
  Dap!int _dap;
  void thunk() { }
}
